Fix button margins on mobile

--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -206,7 +206,7 @@
   .actionwrapper {
     flex-direction: column;
   }
-  .actionwrapper *:nth-of-type(2) {
+  .actionwrapper a:nth-of-type(1) {
     margin: 10px 0;
   }
 }
